# wotd

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: code-checks.yml  python-publish.yml  release.yml
src/wotd/: __init__.py  cli.py  core.py
src/wotd/languages/: README.md  __init__.py  english.py  japanese.py
